<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/purple_200"
    android:id="@+id/quizActivity"
    >


    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/question"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/result"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="170dp"
        android:layout_height="170dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.141" />

    <androidx.cardview.widget.CardView
        android:id="@+id/option1"
        app:cardCornerRadius="50dp"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
        >

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"

            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/option2"
        app:cardCornerRadius="50dp"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60">

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/option3"
        app:cardCornerRadius="65dp"
        android:layout_width="170dp"
        android:layout_height="55dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.80"

        >
        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="30sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            />

    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/nextbutton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/next"
        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.7"


        />




</androidx.constraintlayout.widget.ConstraintLayout>